--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@storybook/react": "^3.3.12",
+    "babel-core": "^6.26.0",
     "webpack-dev-server": "^2.11.0"
+  },
+  "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook"
   }
 }
