--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "material-components-web": "^0.28.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "@storybook/react": "^3.3.12",
